@@ -1,44 +1,57 @@
 package ru.pfr.contracts2.controller.html;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
-import ru.pfr.contracts2.entity.contractIT.BudgetClassificationResponseMapper;
 import ru.pfr.contracts2.entity.contractIT.ContractIT;
-import ru.pfr.contracts2.entity.contractIT.dto.BudgetClassificationDto;
 import ru.pfr.contracts2.entity.contractIT.mapper.ContractItMapper;
+import ru.pfr.contracts2.entity.contracts.Notification;
 import ru.pfr.contracts2.entity.log.Logi;
 import ru.pfr.contracts2.entity.user.User;
-import ru.pfr.contracts2.repository.it.BudgetClassificationRepository;
+import ru.pfr.contracts2.global.GetOtdel;
 import ru.pfr.contracts2.service.it.ContractItService;
 import ru.pfr.contracts2.service.log.LogiService;
 import ru.pfr.contracts2.service.zir.ZirServise;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Controller
 @RequiredArgsConstructor
-@RequestMapping(value = {"/contract/rsp"})
-public class ContractRspController {
-
-    private static final String ROLE = "RSP";
+@RequestMapping(value = {"/contract/dop"})
+public class ContractDopController {
 
     private final ContractItService contractItService;
     private final ZirServise zirServise;
     private final LogiService logiService;
     private final ContractItMapper contractItMapper;
 
-    private final BudgetClassificationRepository budgetClassificationRepository;
+/*    private final BudgetClassificationService budgetClassificationService;
     private final BudgetClassificationResponseMapper budgetClassificationResponseMapper;
 
     @ModelAttribute(name = "budgetClassification")
-    public List<BudgetClassificationDto> budgetClassification() {
-        return budgetClassificationRepository.findByRole(ROLE)
+    public List<BudgetClassificationDto> budgetClassification(
+            Authentication authentication
+    ) {
+        return budgetClassificationService.findByRole(GetOtdel.get(authentication))
                 .stream()
-                .map(budgetClassificationResponseMapper::apply)
+                .map(budgetClassificationResponseMapper)
                 .toList();
+    }*/
+
+    @ModelAttribute(name = "notifications")
+    public List<Notification> notifications(
+            Authentication authentication
+    ) {
+
+        return switch (GetOtdel.get(authentication)) {
+            case "IT" -> zirServise.getNotification("148", "149");
+            case "RSP" -> List.of(); //todo добавить отделы для выбора ответственных
+            default -> List.of();
+        };
     }
 
     @GetMapping("/vievTable")
@@ -47,12 +60,8 @@ public class ContractRspController {
             Model model
     ) {
         logiService.save(new Logi(user.getLogin(), "View",
-                "Показ таблицы rsp контрактов"));
+                "Показ таблицы it контрактов"));
         model.addAttribute("findContractName", "findContractIt");
-        model.addAttribute(
-                "notifications",
-                zirServise.getNotification("148", "149")
-        );
         return "fragment/it/viev :: vievTable";
     }
 
@@ -61,22 +70,23 @@ public class ContractRspController {
             @RequestParam(defaultValue = "") Integer param,
             @RequestParam(defaultValue = "10") Integer col,
             @AuthenticationPrincipal User user,
+            Authentication authentication,
             Model model) {
 
         logiService.save(new Logi(user.getLogin(), "View",
-                "Показ таблицы rsp контрактов на странице " + param));
+                "Показ таблицы it контрактов на странице " + param));
 
         int skip = col * (param == null ? 0 : param - 1);
-        List<ContractIT> contractITs = contractItService.findAll(ROLE)
+        List<ContractIT> contractITs = contractItService.findAll(GetOtdel.get(authentication))
                 .stream()
                 .skip(skip)
                 .limit(col)
                 .toList();
 
-        model.addAttribute("contracts", contractITs
+        model.addAttribute("contracts", contractITs == null ? null : contractITs
                 .stream()
                 .map(contractItMapper::toDto)
-                .toList());
+                .collect(Collectors.toList()));
         model.addAttribute("paramstart",
                 skip);
         model.addAttribute("col",
@@ -87,16 +97,10 @@ public class ContractRspController {
     }
 
     @GetMapping("/add")
-    public String add(@AuthenticationPrincipal User user,
-                      Model model) {
+    public String add(@AuthenticationPrincipal User user) {
 
         logiService.save(new Logi(user.getLogin(), "View",
-                "Показ страницы добавления rsp контракта"));
-
-        model.addAttribute(
-                "notifications",
-                zirServise.getNotification("148", "149")
-        );
+                "Показ страницы добавления it контракта"));
 
         return "fragment/it/add :: addviev";
     }
@@ -104,16 +108,10 @@ public class ContractRspController {
     @GetMapping("/updateViev/{id}")
     public String updateViev(
             @PathVariable Long id,
-            @AuthenticationPrincipal User user,
-            Model model) {
+            @AuthenticationPrincipal User user) {
 
         logiService.save(new Logi(user.getLogin(), "View",
-                "Показ страницы изменения new контракта с id = " + id));
-
-        model.addAttribute(
-                "notifications",
-                zirServise.getNotification("148", "149")
-        );
+                "Показ страницы изменения it контракта с id = " + id));
 
         return "fragment/it/add :: addviev";
     }
